# mrg_modimoop_control

./: CMakeLists.txt  package.xml
include/: boat_dynamics.hpp  control_utils.hpp  localization.hpp  path_planner.hpp  sail_model.hpp
launch/: control.launch.py
src/: boat_dynamics.cpp  control_bridge.cpp  localization.cpp  logger.py  lqr_heading_controller.cpp  path_planner.cpp  planner.cpp  sail_model.cpp  temp_goal_publisher.cpp
src/config/: control.yaml  control_schedule.yaml  ekf.yaml  lqr_heading_controller.yaml
src/params/: control_schedule.csv  control_schedule.npz  control_schedule.yaml  vlm_aero_table.csv  vlm_tables.csv
